--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: wyliog@163.com
 description: "知识是人类进步的阶梯，是文化的传承，作为一个菜鸟也想让自己的知识发光发热，这就是这个blog的来源..."
 keyword: "devops,五柳，运维，python，db，linux，jenkins"
-url: "https://wyliog.github.io"              # your host, for absolute URL
+url: "https://blog.willants.com/"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
