--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '2'
 
 services:
   jekyll:
-    image: jekyll/jekyll:latest
+    image: jekyll/jekyll:3.7.3
     command: jekyll serve --watch --force_polling --verbose
     ports:
       - 4000:4000
     volumes:
-      - .:/srv/jekyll
+      - ./:/srv/jekyll
