--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,15 @@ version: '2'
 
 services:
   jekyll:
-    image: jekyll/jekyll:3.7.3
+    image: wyliog/jekyll:v3.7.3
+    # command: sleep 3600
     command: jekyll serve --watch --force_polling --verbose
+    # - /bin/bash 
+    # - -c 
+    # - |
+    #   cd /srv/jekyll
+    #   bundle update
+    #   jekyll serve --watch --force_polling --verbose
     ports:
       - 4000:4000
     volumes:
